server_err.log
  File "<string>", line 1
    from
        ^
SyntaxError: invalid syntax
